Alembic import crashes when missing arbGeomParams #88605

Closed
opened 2021-05-26 21:10:22 +02:00 by Liu Tianrui · 19 comments

System Information
Operating system: Windows10
Graphics card: ZOTAC GTX1080Ti

Blender Version
Broken: 3.0.0 alpha, 2021-5-27
Worked: 2.92 stable version

Short description of error
When importing the alembic file, blender crashes after hit 'import' in the pop-out menu.

Exact steps for others to reproduce the error
As the error described.

**System Information** Operating system: Windows10 Graphics card: ZOTAC GTX1080Ti **Blender Version** Broken: 3.0.0 alpha, 2021-5-27 Worked: 2.92 stable version **Short description of error** When importing the alembic file, blender crashes after hit 'import' in the pop-out menu. **Exact steps for others to reproduce the error** As the error described.
Author

Added subscriber: @TerryLiuOrigin

Added subscriber: @TerryLiuOrigin

#88978 was marked as duplicate of this issue

#88978 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Mind sharing the particular .abc that causes a crash for you?
Or is it any .abc?

Mind sharing the particular .abc that causes a crash for you? Or is it **any** .abc?
Author

I have tested 3 abc files at my side. So it seems like any .abc will cause the crush. Also, one of the .abc is exported from blender 2.92.

I have tested 3 abc files at my side. So it seems like any .abc will cause the crush. Also, one of the .abc is exported from blender 2.92.
Member

Cannot reproduce, just to make sure: please share one of them (also please try exporting just the default cube from blender and importing again)

Cannot reproduce, just to make sure: please share one of them (also please try exporting just the default cube from blender and importing again)
Author

test.abc The default cube can be successfully exported from blender 3.0.0-alpha. However, importing it causes a crush as well. I am wondering whether it is related to my system language? Mine is Chinese.

[test.abc](https://archive.blender.org/developer/F10144398/test.abc) The default cube can be successfully exported from blender 3.0.0-alpha. However, importing it causes a crush as well. I am wondering whether it is related to my system language? Mine is Chinese.
Author

Nope, I changed the system language to English the problem still persists. I manage to pinpoint the crash text file. Hope it will help.
blender.crash.txt

Nope, I changed the system language to English the problem still persists. I manage to pinpoint the crash text file. Hope it will help. [blender.crash.txt](https://archive.blender.org/developer/F10144415/blender.crash.txt)
Philipp Oeser self-assigned this 2021-05-27 09:33:48 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Note: until the fix is in , you can use 2.93 from https://builder.blender.org/download/daily/ (this does not crash)

Note: until the fix is in , you can use 2.93 from https://builder.blender.org/download/daily/ (this does not crash)

Added subscriber: @georgK

Added subscriber: @georgK

Added subscriber: @DylanLobbregt

Added subscriber: @DylanLobbregt
Philipp Oeser was unassigned by Sybren A. Stüvel 2021-06-18 11:18:34 +02:00
Sybren A. Stüvel self-assigned this 2021-06-18 11:18:34 +02:00

@lichtwerk I overlooked that you had a patch already, hope you don't mind me committing my own version ;-)

@lichtwerk I overlooked that you had a patch already, hope you don't mind me committing my own version ;-)
Sybren A. Stüvel changed title from Alembic importer causes crash to Alembic import crashes when missing `arbGeomParams` 2021-06-18 11:20:33 +02:00

This issue was referenced by 7c68147709

This issue was referenced by 7c681477094e16dd386201c364337dc068ec595a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @zanqdo, @PratikPB2123, @mont29, @iss

Added subscribers: @zanqdo, @PratikPB2123, @mont29, @iss
Member

In #88605#1178714, @dr.sybren wrote:
@lichtwerk I overlooked that you had a patch already, hope you don't mind me committing my own version ;-)

Dont see a reason for not using my version, but... next time you could at least abandon the neglected revision then, thx.

> In #88605#1178714, @dr.sybren wrote: > @lichtwerk I overlooked that you had a patch already, hope you don't mind me committing my own version ;-) Dont see a reason for not using my version, but... next time you could at least abandon the neglected revision then, thx.
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88605
No description provided.