Fix T88605: Alembic import crashes when missing `arbGeomParams`

Add check for the `arbGeomParams` property being valid, before attempting
to access a sub-property from it.